--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
